tests/baselines/reference/defaultArgsInOverloads.errors.txt
==== tests/cases/compiler/defaultArgsInOverloads.ts (5 errors) ====
    function fun(a: string);
    function fun(a = 3);
                 ~~~~~
!!! defaultArgsInOverloads.ts(2,14): error TS2174: Default arguments are only allowed in implementation.
    function fun(a = null) { }
    
    class C {
        fun(a: string);
        fun(a = 3);
         ~~~~~
!!! defaultArgsInOverloads.ts(7,6): error TS2174: Default arguments are only allowed in implementation.
        fun(a = null) { }
        static fun(a: string);
        static fun(a = 3);
                ~~~~~
!!! defaultArgsInOverloads.ts(10,13): error TS2174: Default arguments are only allowed in implementation.
        static fun(a = null) { }
    }
    
    interface I {
        fun(a: string);
        fun(a = 3);
            ~~~~~
!!! defaultArgsInOverloads.ts(16,9): error TS2174: Default arguments are only allowed in implementation.
    }
    
    var f: (a = 3) => number;
            ~~~~~
!!! defaultArgsInOverloads.ts(19,9): error TS2174: Default arguments are only allowed in implementation.